Fix title typo in index.html

--- a/web_optimalizovany_verze_B/index.html
+++ b/web_optimalizovany_verze_B/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Ukázkový web – optimalizovaná verze</title>
+  <title>Ukázkový web – optimalizovaná verz</title>
   <meta name="description" content="Ukázkový web pro výuku optimalizace: sémantika, přístupnost, rychlost a SEO.">
   <link rel="stylesheet" href="style.css">
   <script src="script.js" defer></script>
